--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   </header>
 
   <main class="main">
-
     <!-- SECTION 1 -->
     <section class="section section__1 sectionscroll" id="s1">
       <img class="section1__flaque" src="/flaqueS1.svg" alt="flaque" aria-hidden="true" />
@@ -66,10 +65,12 @@
       <section class="section__content">
         <section class="section3__left">
           <p class="section__desc js-split-desc">
-            Environ <span class="section__descvalue">les trois quarts</span> de l’eau douce sont stockés sous forme
-            de glaces et de neiges permanentes, et ne sont donc pas directement exploitables.
-            Le reste correspond aux lacs, rivières et nappes souterraines, qui constituent nos principales
-            ressources utilisables.
+            Environ
+            <span class="section__descvalue">les trois quarts</span> de l’eau
+            douce sont stockés sous forme de glaces et de neiges permanentes,
+            et ne sont donc pas directement exploitables. Le reste correspond
+            aux lacs, rivières et nappes souterraines, qui constituent nos
+            principales ressources utilisables.
           </p>
 
           <img class="section3__goutte" src="/Gouttepleure.svg" alt="" aria-hidden="true" />
@@ -91,10 +92,9 @@
           L’agriculture représente
           <span class="section__descvalue">58%</span> de la consommation
           d’eau, suivie par l’eau potable avec
-          <span class="section__descvalue">26%</span>. Le refroidissement
-          des centrales compte pour
-          <span class="section__descvalue">12%</span>, tandis que
-          l’industrie n’en représente que
+          <span class="section__descvalue">26%</span>. Le refroidissement des
+          centrales compte pour <span class="section__descvalue">12%</span>,
+          tandis que l’industrie n’en représente que
           <span class="section__descvalue">4%</span>.
         </p>
 
@@ -106,7 +106,9 @@
 
     <!-- SECTION 5 -->
     <section class="section section__5 sectionscroll" id="s5">
-      <h2 class="section__title">À la maison, l’eau coule vite… et se perd souvent</h2>
+      <h2 class="section__title">
+        À la maison, l’eau coule vite… et se perd souvent
+      </h2>
 
       <section class="section5__content">
         <section class="dataviz5">
@@ -134,7 +136,9 @@
 
     <!-- SECTION 6 -->
     <section class="section section__6 sectionscroll" id="s6">
-      <h2 class="section__title">À la maison, l’eau coule vite… et se perd souvent</h2>
+      <h2 class="section__title">
+        À la maison, l’eau coule vite… et se perd souvent
+      </h2>
 
       <section class="section__content">
         <p class="section__desc js-split-desc">
@@ -157,8 +161,10 @@
 
       <section class="section__content">
         <p class="section__desc js-split-desc">
-          Un simple robinet qui goutte peut gaspiller jusqu’à 120 litres d’eau par jour, tandis qu’une chasse d’eau
-          défectueuse peut dépasser 600 litres par jour, soit bien plus que la consommation quotidienne normale.
+          Un simple robinet qui goutte peut gaspiller jusqu’à 120 litres d’eau
+          par jour, tandis qu’une chasse d’eau défectueuse peut dépasser 600
+          litres par jour, soit bien plus que la consommation quotidienne
+          normale.
         </p>
 
         <section class="dataviz7">
@@ -175,7 +181,8 @@
       <section class="section__content">
         <section class="section8__text">
           <p class="section__desc js-split-desc">
-            Le réseau national d’assainissement et de distribution de l’eau perd environ
+            Le réseau national d’assainissement et de distribution de l’eau
+            perd environ
           </p>
           <p class="section8__descvalue js-split-desc">1 litre sur 5</p>
           <p class="section__desc js-split-desc">à cause des fuites.</p>
@@ -189,17 +196,46 @@
 
     <!-- SECTION 9 -->
     <section class="section section__9 sectionscroll" id="s9">
-      <h2 class="section__title section9__title">Une consommation d’eau souvent invisible</h2>
+      <h2 class="section__title section9__title">
+        Une consommation d’eau souvent invisible
+      </h2>
 
       <section class="section__content section9__content">
         <p class="section__desc js-split-desc section9__desc">
-          Certains produits du quotidien nécessitent de grandes quantités d’eau pour être fabriqués. Produire un
-          kilogramme de bœuf demande entre <span class="section9__descvalue">550 et 700 litres d’eau</span>, et un
-          litre d’eau embouteillée nécessite en réalité <span class="section9__descvalue">2 litres</span>
+          Certains produits du quotidien nécessitent de grandes quantités
+          d’eau pour être fabriqués. Produire un kilogramme de bœuf demande
+          entre
+          <span class="section9__descvalue">550 et 700 litres d’eau</span>, et
+          un litre d’eau embouteillée nécessite en réalité
+          <span class="section9__descvalue">2 litres</span>
           d’eau si l’on prend en compte l’ensemble du processus de production.
-          de notre consommation d’eau est indirecte, liée à la production des biens et services que
-          nous utilisons quotidiennement.
+          de notre consommation d’eau est indirecte, liée à la production des
+          biens et services que nous utilisons quotidiennement.
         </p>
+      </section>
+    </section>
+
+    <!-- SECTION 10 -->
+    <section class="section section__10 sectionscroll" id="s10">
+      <h2 class="section__title section10__title">
+        L’industrie textile, un impact majeur sur l’eau
+      </h2>
+
+      <section class="section__content">
+        <p class="section__desc js-split-desc section10__desc">
+          À l’échelle mondiale, l’industrie textile prélève à elle seule <span class="section10__descvalue">4%</span>
+          de
+          toute l’eau potable consommée. Elle est également responsable d’environ
+          <span class="section10__descvalue">20%</span>de la pollution industrielle de l’eau, en raison des procédés
+          de
+          fabrication et de teinture des textiles.
+        </p>
+
+        <section class="dataviz10">
+          <canvas class="section810__canvas" id="section10__canvas"></canvas>
+
+        </section>
+
       </section>
     </section>
 
